appscore/k8s/all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabitmq-deployment
  labels:
    app: rabitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabitmq-pod
  template:
    metadata:
      labels:
        app: rabitmq-pod
    spec:
      containers:
      - name: rabitmq-cont
        image: rabbitmq:3-management
        ports:
        - name: port5672
          containerPort: 5672
        - name: port15672
          containerPort: 15672
        #resources:
        #  requests:
        #    memory: "300Mi"
        #    cpu: "4m"

---
apiVersion: v1
kind: Service
metadata:
  name: service-rabittmq
spec:
  selector:
    app: rabitmq-pod
  ports:
    - name: port5672
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: port15672
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-pod
  template:
    metadata:
      labels:
        app: database-pod
    spec:
      containers:
      - name: database-cont
        image: bart120/yv-database:1
        ports:
        - containerPort: 1433
        #resources:
        #  requests:
        #    memory: "1500Mi"
        #    cpu: "170m"

---
apiVersion: v1
kind: Service
metadata:
  name: service-database
spec:
  selector:
    app: database-pod
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-data-deployment
  labels:
    app: user-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-data-pod
  template:
    metadata:
      labels:
        app: user-data-pod
    spec:
      containers:
      - name: user-data-cont
        image: redis
        ports:
        - containerPort: 6379
        #resources:
        #  requests:
        #    memory: "100Mi"
         #   cpu: "4m"

---
apiVersion: v1
kind: Service
metadata:
  name: service-user-data
spec:
  selector:
    app: user-data-pod
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-identity-deployment
  labels:
    app: api-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-identity-pod
  template:
    metadata:
      labels:
        app: api-identity-pod
    spec:
      containers:
      - name: api-identity-cont
        image: bart120/yv-api-identity:1
        ports:
        - containerPort: 80
        #resources:
        #  requests:
        #    memory: "200Mi"
        #    cpu: "3m"

---
apiVersion: v1
kind: Service
metadata:
  name: service-api-identity
spec:
  selector:
    app: api-identity-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-applicants-deployment
  labels:
    app: api-applicants
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-applicants-pod
  template:
    metadata:
      labels:
        app: api-applicants-pod
    spec:
      containers:
      - name: api-applicants-cont
        image: bart120/yv-api-applicants:1
        ports:
        - containerPort: 80
        #resources:
        #  requests:
        #    memory: "200Mi"
        #    cpu: "3m"

---
apiVersion: v1
kind: Service
metadata:
  name: service-api-applicants
spec:
  selector:
    app: api-applicants-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-jobs-deployment
  labels:
    app: api-jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-jobs-pod
  template:
    metadata:
      labels:
        app: api-jobs-pod
    spec:
      containers:
      - name: api-jobs-cont
        image: bart120/yv-api-jobs:2
        ports:
        - containerPort: 80
        #resources:
        #  requests:
        #    memory: "200Mi"
        #    cpu: "3m"

---
apiVersion: v1
kind: Service
metadata:
  name: service-api-jobs
spec:
  selector:
    app: api-jobs-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-pod
  template:
    metadata:
      labels:
        app: web-pod
    spec:
      containers:
      - name: web-cont
        image: bart120/yv-web:1
        ports:
        - containerPort: 80
        #resources:
        #  requests:
        #    memory: "500Mi"
        #    cpu: "4m"
        livenessProbe:
          httpGet:
            path: /home/about
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 15

---
apiVersion: v1
kind: Service
metadata:
  name: service-web
spec:
  selector:
    app: web-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
