appscore/k8s/ingress-prom.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prom
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          #- path: /
          #  pathType: Prefix
          #  backend:
          #    service:
          #      name: prometheus-prometheus-oper-prometheus
          #      port: 
          #        number: 9090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port: 
                  number: 80
